# cmake_project_example

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
shader/: texture.fs
src/: Image.cpp  Image.h  buffer.cpp  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp
